--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
             Hello, Guys!
         </h1>
     </header>
+    <h1>List of ten Beautiful Islands in the World</h1>
+      <ol type = "i">
+         <li>Maldives</li>
+         <li>Bora Bora</li>
+         <li>Palawan </li>
+         <li>Seychelles </li>
+         <li>Santorini</li>
+         <li>Bali</li>
+         <li>The Dalmatian Islands</li>
+         <li>Capri</li>
+         <li>Ko Phi Phi</li>
+         <li>Sardinia</li>
+      </ol>
     <main>
         <h2 style="color:rgb(134, 18, 90)"> About Me: </h2>
         <p style="color:purple;
         font-family:monospace;
         font-size:larger;">
-            I am Reem Mobaideen, I am 33 years old. I studied BA at Mutah University and I studied Masters at the University of Jordan,
+            I am Reem Mobaideen, i hope to guess my age. I studied BA at Mutah University and I studied Masters at the University of Jordan,
              majoring in Computer Science. I prepared my master/'s thesis in computer networks. I love programming very much and always aspire to be a professional software developer
         </p>
         <br>
